--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 <div class="main_content">
   <h1>{{page.title }}</h1>
-  <em>{{ page.date | date_to_string }}<em>
+  <em>{{ page.date | date_to_string }}</em>
   {{ content }}
 </div>
