add jekyll error

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,31 @@
    <meta name="author" content="Felix Sun" />
 </head>
 <body>
-  <div class="content">
-	{{content}}
+
+<div class="site">
+  <div class="title">
+    <a href="/">Felix Sun</a>
+    <a class="extra" href="/">home</a>
   </div>
+
+  {{content}}
+
+  <div class="footer">
+    <div class="contact">
+      <p>
+        Felix Sun<br />
+        sunfmin@gmail.com
+      </p>
+    </div>
+    <div class="contact">
+      <p>
+        <a href="http://github.com/sunfmin/">github.com/sunfmin</a><br />
+        <a href="http://twitter.com/sunfmin/">twitter.com/sunfmin</a><br />
+      </p>
+    </div>
+  </div>
+</div>
+
   <div class="scripts">
 	  <script type="text/javascript">
 	  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
