--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,13 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>:thoughts => nil &raquo; {{ page.title }}</title>
    <meta name="author" content="Felix Sun" />
+   <link type="text/css" rel="stylesheet" href="/files/style.css">
 </head>
 <body>
 
 <div class="site">
   <div class="title">
     <a href="/">Felix Sun</a>
-    <a class="extra" href="/">home</a>
   </div>
 
   {{content}}
