--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>:thoughts => nil &raquo; {{ page.title }}</title>
+   <title>input, process, output &raquo; {{ page.title }}</title>
    <meta name="author" content="Felix Sun" />
    <link type="text/css" rel="stylesheet" href="/files/style.css">
 </head>
@@ -9,7 +9,7 @@
 
 <div class="site">
   <div class="title">
-    <a href="/">Felix Sun</a>
+    <a href="/">home</a>
   </div>
 
   {{content}}
