fix style and add comment

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,4 +6,22 @@ layout: default
   <h1>{{page.title }}</h1>
   <em>{{ page.date | date_to_string }}</em>
   {{ content }}
+
+{{if page.gplus != '' }}
+<div class="comments"><a href="{{page.gplus}}"> leave a comment</a></div> 
+{{ end }}
+
+<!-- Place this tag where you want the +1 button to render. -->
+<div class="g-plusone" data-size="small" data-annotation="inline" data-width="450"></div>
+
+<!-- Place this tag after the last +1 button tag. -->
+<script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>
+
+
 </div>
