add feed burner and change title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
-   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>input, process, output &raquo; {{ page.title }}</title>
-   <meta name="author" content="Felix Sun" />
-   <link type="text/css" rel="stylesheet" href="/files/style.css">
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <title>{{ page.title }} | input, process, output</title>
+  <meta name="author" content="Felix Sun" />
+  <link href="http://feeds.feedburner.com/sunfmin" rel="alternate" title="Felix Sun" type="application/atom+xml" />
+  <link type="text/css" rel="stylesheet" href="/files/style.css">
 </head>
 <body>
 
